fixed center alignment on input fields

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -33,7 +33,7 @@
 
 @media (min-width:900px) {
     .btn-back {
-        margin-bottom: 4em;
+        /* margin-bottom: 4em; */
     }
 }
 .btn-back {
