--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -16,6 +16,7 @@ form {
     flex-direction: column;
     justify-content: center;
     margin-bottom: 2em;
+    align-items: center;
 }
 
 .form-summary-wrapper {
